src/components/CCIP/ChainHero/ChainHero.css
.ccip-chain-hero {
  background-color: var(--gray-100);
  border-bottom: 1px solid var(--gray-200);
}

.ccip-chain-hero__grid {
  width: 100vw;
  z-index: 4;
  position: relative;
}

.ccip-chain-hero__heading {
  color: var(--gray-900);
  display: flex;
  align-items: center;
  gap: var(--space-6x);
}

.ccip-chain-hero__heading h1 {
  margin: 0;
  font-size: 28px;
  font-weight: 500;
}

.ccip-chain-hero__heading img {
  width: 80px;
  height: 80px;
}

.ccip-chain-hero__heading__images {
  position: relative;
}

.ccip-chain-hero__heading__images__small {
  width: var(--space-10x) !important;
  height: var(--space-10x) !important;
  border-radius: 50%;
  top: 60%;
  left: 60%;
  position: absolute;
}

.ccip-chain-hero__content {
  --gutter: var(--space-2x);
  --doc-padding: 2rem;
  gap: var(--gutter);
  padding-left: var(--space-4x);
  padding-right: var(--space-4x);
  padding-top: var(--space-10x);
  padding-bottom: var(--space-10x);
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.ccip-chain-hero__token-logo {
  border-radius: 50%;
}

.ccip-chain-hero__top {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: var(--space-16x);
}

.ccip-chain-hero__chainSearch {
  width: 358px;
}

.ccip-chain-hero__details {
  display: grid;
  gap: var(--space-4x);
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  margin-top: var(--space-10x);
}

.ccip-chain-hero__feeTokens {
  margin-top: var(--space-10x);
}

.ccip-chain-hero__details__label {
  /* Body/Body Semi S */
  font-family: "Inter";
  font-style: normal;
  font-weight: 600;
  font-size: 14px;
  line-height: 22px;
  padding-bottom: var(--space-4x);
  color: var(--gray-500);
}

.ccip-chain-hero__feeTokens__list {
  display: flex;
  align-items: center;
  gap: var(--space-12x);
}

.ccip-chain-hero__feeTokens__item {
  display: flex;
  align-items: center;
  gap: var(--space-1x);
  color: #151a23;
}

.ccip-chain-hero__feeTokens__item a {
  font-size: var(--space-4x) !important;
}

.ccip-chain-hero__feeTokens__item__logo {
  width: var(--space-5x);
  height: var(--space5x);
  border-radius: 50%;
}

.ccip-chain-hero__details__value {
  /* Body/Body */
  font-family: "Inter";
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  /* identical to box height, or 150% */
  font-feature-settings: "liga" off;

  color: #212732;
}

.ccip-chain-hero__token-logo__symbol {
  font-weight: 500;
  font-size: 18px;
  color: var(--gray-500);
}

@media (min-width: 50em) {
  .ccip-chain-hero__content {
    max-width: 1440px;
  }
}

@media (min-width: 992px) {
  .ccip-chain-hero__content {
    grid-template-columns: 1fr 1fr;
    padding-left: var(--space-10x);
    padding-right: var(--space-10x);
  }
}

